Fixed bug #27235 (NUMERIC x.0 field returns empty string on 0) CS/WS # MFB not necessary, bug doesn't apply to HEAD